--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
         <div>
             <h2>Pacote 1</h2>
         </div>
+        <div>
+            <h2>Pacote 2</h2>
+        </div>
     </body>    
 </html>
